tests/ui/block-result/unexpected-return-on-unit.stderr
error[E0308]: mismatched types
  --> $DIR/unexpected-return-on-unit.rs:9:5
   |
LL |     foo()
   |     ^^^^^ expected `()`, found `usize`
   |
help: consider using a semicolon here
   |
LL |     foo();
   |          +
help: try adding a return type
   |
LL | fn bar() -> usize {
   |          ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
